--- a/overrides/config/create-common.toml
+++ b/overrides/config/create-common.toml
@@ -159,7 +159,7 @@
 			maxHeight = 10
 			#
 			#Whether to spawn this in your World
-			enable = true
+			enable = false
 			#
 			#Range: > 0
 			clusterSize = 128
