--- a/overrides/config/resourcefulbees/common.toml
+++ b/overrides/config/resourcefulbees/common.toml
@@ -6,7 +6,7 @@
 	beeDiesFromSting = true
 	#
 	#Should bees die when their Y-level is below 0?
-	#Note: If false, bees will get stuck just below y-0 and not move. **May not be useful with new AI**
+	#Note: If false, bees will get stuck just below y-0 and not move.
 	beeDiesInVoid = true
 	#
 	#This value scales the child size for all Resource Bees.
@@ -17,11 +17,6 @@
 	#Note: Setting the value in bee JSON overrides this value.
 	#Range: 0.5 ~ 2.0
 	global_bee_size_modifier = 0.75
-	#
-	#Should bees inflict poison damage?
-	#Note: Poison is only inflicted if a bee has not been given a trait with a special damage output.
-	#Set to false if you want to configure bees individually.
-	beesInflictPoison = true
 
 ["Apiary Options"]
 	#
@@ -122,7 +117,7 @@
 	#
 	#Set this to false when you want to use our custom Biome Dictionary system. [true/false]
 	#At a later time we will look into either combining with the Forge system or making the Forge system data pack capable.
-	useForgeBiomeDictionaries = true
+	useForgeBiomeDictionaries = false
 	#
 	#Set to true if you want easter egg bees to generate (WIP) [true/false]
 	enableEasterEggBees = true
@@ -163,9 +158,6 @@
 	#A higher value means the nest is less likely to spawn.
 	#Range: 4 ~ 100
 	nether_nest_generation_chance = 12
-	#The value added to weight for bees in a flower forests
-	#Range: 0 ~ 9
-	beesMoreCommonInFlowerForests = 4
 	#
 	#Chance for nest to spawn when generating chunks in overworld category biomes. [1/x]
 	#A higher value means the nest is less likely to spawn.
